--- a/Jsp_project/WebContent/css/style.css
+++ b/Jsp_project/WebContent/css/style.css
@@ -1,1 +1,19 @@
 @charset "UTF-8";
+
+.title {
+	text-align: left;
+	margin-left: 500px;
+}
+
+.movieWrite{
+	border-spacing: 30px;
+}
+
+.search {
+	text-align: right;
+	margin-right: 500px;
+}
+
+td {
+	text-align: center;
+}
