영화 수정버튼 기능 구현 영화 삭제버튼 기능 구현 줄거리 글자수 제한 movieWrite.jsp 각 항목에 placeholder 추가 미리보기 기능 구현!! 회원, 영화리스트 페이징처리 테이블 부트스트랩 스타일 추가 권한변경 ui변경 고민해봐야함

--- a/Jsp_project/WebContent/css/style.css
+++ b/Jsp_project/WebContent/css/style.css
@@ -47,9 +47,9 @@ a.menu:after, .dropdown-toggle:after {
 	margin-left: 500px;
 }
 
-.movieWrite, .movieWrite tr, .movieWrite td{
-	border : 1px solid red;
-	padding : 10px 5px;
+.movieWrite, .movieWrite tr, .movieWrite td, .movieWrite th{
+	border-bottom : 1px solid black;
+	padding : 10px 10px;
 	width : 800px;
 }
 
@@ -64,15 +64,19 @@ a.menu:after, .dropdown-toggle:after {
 	width: 950px;
 }
 
-.memberList, .memberList th, .memberList td{
-	text-align: center;
-	border : 1px solid red;
-	width: 950px;
+.table td, th{
+	text-align:center;
 }
 
-#upload{
-	width:100px;
-	height:100px;
+#poster{
+	width:200px;
+	height:150px;
+}
+
+textarea{
+	resize:none;
+	
+}
 
 .localWrite th, td{
 	padding: 10px;
