--- a/Jsp_project/WebContent/css/style.css
+++ b/Jsp_project/WebContent/css/style.css
@@ -19,12 +19,6 @@
 	padding-right: 30px;
 }
 
-/* login, join button */
-.navbar-right li {
-	margin-left: 5px;
-	margin-top: 7px;
-}
-
 /* toggle switch hide */
 a.menu:after, .dropdown-toggle:after {
    	content: none;
@@ -41,7 +35,50 @@ a.menu:after, .dropdown-toggle:after {
 	align:center;
 	padding-left:32.5%;
 }
-/* ### main css end ###*/
+/* ### main css end ### */
+
+/* ### login modal start ### */
+.modal_wrap{
+    display: none;
+    width: 500px;
+    height: 300px;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    margin: -250px 0 0 -250px;
+    background:#eee;
+    z-index: 2;
+    padding: 30px;
+}
+    
+.black_bg{
+    display: none;
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0, 0,0, 0.5);
+    top:0;
+    left: 0;
+    z-index: 1;
+}
+    
+.modal_close{
+    width: 26px;
+    height: 26px;
+    position: absolute;
+    top: -30px;
+    right: 0;
+}
+    
+.modal_close> a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    background:url(https://img.icons8.com/metro/26/000000/close-window.png);
+    text-indent: -9999px;
+}
+/* ### login modal end ### */
 
 /* 영화 차트 start*/
 .movie-list-info {
