--- a/Jsp_project/WebContent/css/style.css
+++ b/Jsp_project/WebContent/css/style.css
@@ -76,6 +76,221 @@ a.menu:after, .dropdown-toggle:after {
 }
 /* 영화 차트 end */
 
+/* 영화 상세페이지 start */
+.movie-content {
+	position : relative;
+	width:100%;
+	height:520px;
+	background-color : #151515;
+}
+
+.movie-content-img {
+	position : absolute;
+	background-repeat:no-repeat;
+	background-size : 100% auto;
+	width: 1100px;
+	height:100%;
+	margin:0 0 0 350px;
+	opacity: 0.3;
+}
+
+.movie-detail-cont {
+	position : absolute;
+	width : 1100px;
+	height:100%;
+	margin: 0 0 0 350px;
+}
+
+.d-day {
+	background-color : #432e75;	
+	height: 22px;
+	width: 50px;
+	text-align:cetner;
+}
+.movie-title {
+	font-size: 3.0666em;
+}
+
+.movie-title-en {
+	font-size : 1.3333em;
+}
+
+.movie-title, .movie-title-en {
+	color : #fff;
+	margin : 0 0 10px 0;
+}
+
+.movie-info {
+	float:left;
+
+	left: 0px;
+	bottom:50px;
+	color: #fff;
+}
+
+.movie-info-stack {
+	display: block;
+	left: 100px;
+	bottom:50px;
+	color: #fff;
+}
+.movie-detail-cont .poster{
+	display: block;
+    position: absolute;
+    right: 0;
+    top: 45px;
+}
+.movie-detail-cont .reserve {
+	display: block;
+    position: absolute;
+    right: 0;
+    bottom: 85px;
+    width: 244px;
+    background-color: #329eb1;
+    text-align:center;
+    font-color:#fff;
+}
+.movie-detail-cont .reserve a {
+	color:#fff;
+    font-size: 2em;
+}
+
+.movieInfo {
+	width: 1100px;
+	height: 100%;
+	margin: 0 0 0 350px;
+}
+
+.movieInfo p span {
+	border-right : 0.5px solid black;
+	padding : 0 10px 0 0;
+}
+
+.review {
+	width: 1100px;
+	height: 100%;
+	margin: 0 0 0 350px;
+}
+
+.memberName {
+	float:left;
+	padding:0 30px 0 0;
+}
+.memberName span{
+	display: block;
+    text-align: center;
+    line-height: 80px;
+}
+.review-text{
+	float:left;
+}
+.review-text textarea{
+	width:800px;
+	height:80px;
+}
+
+.memberName1 {
+	float:left;
+	padding:0 10px 0 0;
+}
+
+.memberName1 span{
+	display: block;
+    text-align: center;
+    line-height: 80px;
+    bottom:0px;
+}
+.write-review{
+	float:left;
+	display:block;
+	padding: 25px 0 0 10px;
+	vertical-align:middle;
+}
+.review-box {
+	background-color : #f8f8fa;
+	float:left;
+	height:80px;
+	width:800px;
+	line-height: 80px;
+}
+.story-point{
+	float:left;
+	line-height: 80px;
+}
+.story-point span{
+	font-size: 2em;
+	margin:0 0 0 30px;
+}
+.story-text {
+    position: absolute;
+	margin : 0 0 0 100px;
+}
+.story-text span {
+	padding: 0 0 0 30px;
+}
+.story-text:before{
+	content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 1px;
+    height: 50px;
+    margin-top: -25px;
+    background-color: rgba(0,0,0,.1);
+}
+/* 영화 상세페이지 end */
+/* 상영시간표 페이지 start */
+.timetable-container {
+	display: flex;
+  	justify-content: center;
+}
+.movie-choise-area {
+	float : left;
+	align : middle;
+}
+
+.movie-choise-area ul li {
+	width: 150px;
+	height:150px;
+	border:1px solid black;
+	text-align:center;
+	list-style: none;
+}
+.movie-choise-area ul li a {
+	width:100%;
+	height:100%;
+	vertical-align:middle;
+}
+.movie-choise-area ul li a span{
+	font-size:1.66em;
+}
+.movie-choise {
+	border:1px solid black;
+	border-radius:3px;
+	float:left;
+	width: 800px;
+	height:300px;
+	padding: 0 0 0 20px;
+}
+
+.movie-choise li{
+	float:left;
+	width:33%;
+	height:25px;
+}
+.movie-choise li button {
+	width:80%;
+	text-align:left;
+}
+.movie-choise li button :hover {
+	text-decoration:underline;
+}
+.movieposter {
+	width:200px;
+	height:300px;
+}
+/* 상영시간표 페이지 end */
 /* 관리 페이지 	*/
 .title {
 	text-align: left;
