screen 테이블 컬럼 변경(상영시작일,상영종료일,시네마이름 추가) 컬럼 변경에 따른 dto, dao, action, jsp 수정

--- a/Jsp_project/WebContent/css/style.css
+++ b/Jsp_project/WebContent/css/style.css
@@ -80,6 +80,14 @@ a.menu:after, .dropdown-toggle:after {
 }
 /* ### login modal end ### */
 
+/* ### screen setting start ### */
+ 
+input[type=date]::-webkit-calendar-picker-indicator {
+  margin-left: -15px;
+}
+
+/* ### screen setting end ### */
+
 /* 영화 차트 start*/
 .movie-list-info {
     position: relative;
