--- a/Jsp_project/WebContent/css/style.css
+++ b/Jsp_project/WebContent/css/style.css
@@ -376,6 +376,14 @@ a.menu:after, .dropdown-toggle:after {
 	background-color:white;
 	border : 0px;
 }
+.
+.wrap .on :hover {
+	background-color: gray;
+}
+
+.wrap .on :visited {
+	background-color: #555;
+}
 .year {
 	position: absolute;
     top: 0;
