--- a/Jsp_project/WebContent/css/style.css
+++ b/Jsp_project/WebContent/css/style.css
@@ -429,6 +429,44 @@ input[type=date]::-webkit-calendar-picker-indicator {
 	margin-top:50px;
 	margin-left:300px;
 }
+
+.theater-list-box {
+	margin-top:0px;
+	margin-left:0px;
+	position:relative;
+}
+
+.theater-list-box1{
+	margin-left:300px;
+	width:1500px;
+	height:50px;
+}
+
+.localscreen {
+	margin-top:10px;
+	padding-bottom:20px;
+	margin-right: 30px;
+	float:left;
+}
+
+.movietype {
+	float:left;
+	width: 50px;
+	height:50px;
+	text-align:center;
+	margin-right:50px;
+}
+.movietype-text{
+	font-size : 2em;
+}
+
+.movietime-box{
+	float:left;
+	width: 50px;
+	height:50px;
+	text-align:center;
+	margin-right:20px;
+}
 /* 상영시간표 페이지 end */
 /* 관리 페이지 	*/
 .title {
