지금 시간 이후의 영화만 보여주기 구현해야함 요일보기에서 앞뒤 버튼 기능 구현.... 버튼계속 눌러보면서 안되는 부분 확인하기

--- a/Jsp_project/WebContent/css/style.css
+++ b/Jsp_project/WebContent/css/style.css
@@ -319,6 +319,15 @@ input[type=date]::-webkit-calendar-picker-indicator {
 	padding: 0 0 0 20px;
 }
 
+movie-choise1 {
+	border:1px solid black;
+	border-radius:3px;
+	float:left;
+	width: 800px;
+	height:300px;
+	padding: 0 0 0 20px;
+}
+
 .movie-choise li{
 	float:left;
 	width:33%;
@@ -349,7 +358,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
 	width:800px;
 }
 
-#title_ko {
+#title_ko, #title_ko2{
 	color:green;
 }
 
@@ -384,6 +393,11 @@ input[type=date]::-webkit-calendar-picker-indicator {
 	background-color:white;
 	border : 0px;
 }
+
+.on:hover{
+	bacgroundcolor:gray;
+}
+
 .year {
 	position: absolute;
     top: 0;
