--- a/Jsp_project/WebContent/css/style.css
+++ b/Jsp_project/WebContent/css/style.css
@@ -6,6 +6,12 @@
 @import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css');
 
+/* ### booking css start ### */
+.booking_person input[type="number"]::-webkit-outer-spin-button, 
+.booking_person input[type="number"]::-webkit-inner-spin-button {
+	opacity: 1 !important;
+}
+/* ### booking css end ### */
 
 /* ### main header css start ### */
 /* menu mouseover auto drop */
