--- a/Jsp_project/WebContent/css/style.css
+++ b/Jsp_project/WebContent/css/style.css
@@ -7,10 +7,51 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css');
 
 /* ### booking css start ### */
-.booking_person input[type="number"]::-webkit-outer-spin-button, 
-.booking_person input[type="number"]::-webkit-inner-spin-button {
-	opacity: 1 !important;
-}
+	.bottm_div {
+		display: inline-block;
+		width: auto;
+		height: 150px;
+		vertical-align: top;
+		margin-right: 10px;
+	}
+	
+	.top_div {
+		display: inline-block;
+		width: auto;
+		height: 80px;
+		vertical-align: top;
+		margin-right: 10px;
+		margin-top: 20px;
+	}
+	
+	.adult_btn {
+		width:60px;
+		height:40px;
+	}
+	
+	.junior_btn {
+		width:60px;
+		height:40px;
+	}
+	
+	#seat_cover_div {
+		position: absolute;
+		width: 570px;
+		height: 310px;
+		background-color: #aaa;
+		opacity: 90%;
+		z-index: 5;
+		top: 50%;
+		left:50%;
+		margin: -190px 0 0 -290px;
+	}
+	
+	#cover_span {
+		font-size: 1.8em;
+		font-weight: bold;
+		color: tomato;
+	}
+
 /* ### booking css end ### */
 
 /* ### main header css start ### */
