--- a/Jsp_project/WebContent/css/style.css
+++ b/Jsp_project/WebContent/css/style.css
@@ -18,7 +18,7 @@
 	.top_div {
 		display: inline-block;
 		width: auto;
-		height: 80px;
+		height: 120px;
 		vertical-align: top;
 		margin-right: 10px;
 		margin-top: 20px;
@@ -34,16 +34,20 @@
 		height:40px;
 	}
 	
+	.seat_btn:hover {
+		background: orange;
+	}
+	
 	#seat_cover_div {
 		position: absolute;
 		width: 570px;
-		height: 310px;
+		height: 420px;
 		background-color: #aaa;
 		opacity: 90%;
 		z-index: 5;
 		top: 50%;
 		left:50%;
-		margin: -190px 0 0 -290px;
+		margin: -130px 0 0 -290px;
 	}
 	
 	#cover_span {
