--- a/Jsp_project/WebContent/css/style.css
+++ b/Jsp_project/WebContent/css/style.css
@@ -6,21 +6,510 @@
 @import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css');
 
+body{
+	font-family: nanumbarungothic;
+	background-color: black;
+}
+
+.header_day {
+	height: 70px;
+    margin-bottom: 0px;
+    /* margin-top: 5%; */
+    width: 95%;
+    padding-top: 15px;
+}
+
+.day_btn {
+	background-color: black;
+    border: 0px solid #ddd;
+}
+
+.list-group-horizontal-md .list-group-item {
+    margin-right: -1px;
+    margin-bottom: -1px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+}
+
+.list-group-item.active, .list-group-item.active:focus, .list-group-item.active:hover {
+    text-shadow: 0 -1px 0 black;
+    background-image: -webkit-linear-gradient(top,mediumpurple 0,mediumpurple 100%);
+    background-image: -o-linear-gradient(top,mediumpurple 0,mediumpurple 100%);
+    background-repeat: repeat-x;
+    border-color: mediumpurple;
+    background-color: mediumpurple;
+    z-index: 2;
+    color: #fff;
+}
+
+.list-group-horizontal-md .list-group-item:first-child {
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
+
+.list-group-horizontal-md .list-group-item:last-child {
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 7px;
+}
+
+.list-group-item.disabled, .list-group-item:disabled {
+    color: #535e69;
+    pointer-events: none;
+    background-color: #ddd;
+}
+
+.list_item_bg {
+	background-color: #fff;
+}
+
+.qbooking_all_div {
+	width: 70%;
+    margin: 0 auto;
+    margin-top: 1%;
+    background-color: rgb(255 255 255 / 90%);
+    height: 629px;
+    border-radius: 10px;
+}
+
+.booking_title_m {
+	font-size: 19px;
+    text-align: left;
+    margin-right: 75%;
+    color: black;
+    margin-bottom: 1%;
+    border-bottom: 1px solid black;
+}
+
+.booking_title_c {
+	font-size: 19px;
+    text-align: left;
+    margin-right: 70%;
+    color: black;
+    margin-bottom: 1%;
+    border-bottom: 1px solid black;
+}
+
+.booking_title_t {
+	font-size: 19px;
+    text-align: left;
+    margin-right: 93%;
+    color: black;
+    margin-bottom: 1%;
+    border-bottom: 1px solid black;
+}
+
+.booking_list_m {
+	margin-left: 7%;
+    margin-top: 3%;
+}
+
+.booking_list_c {
+    margin-top: 5%;
+}
+
+.booking_list_cc {
+    margin-top: 10%;
+}
+
+.booking_list_b {
+    margin-top: 1%;
+    width: 579px;
+}
+
+.booking_list_gr {
+	height: 474px;
+	overflow: auto;
+	width: 576px;
+	background-color: #E6E6E6;
+}
+
+.select_info_div {
+	width: 100%;
+    height: 117px;
+    background-color: rgb(255 255 255 / 90%);
+    /* display: inline; */
+    color: white;
+    /* margin-left: -77%; */
+    border-radius: 7px;
+    margin: 0 auto;
+    margin-top: -1%;
+}
+
+.sle_movie_img  {
+	margin-top: 14px;
+    margin-right: 10px;
+}
+
+.sle_movie_div {
+	color: black;
+	display: inline;
+	margin-left: -56%;
+}
+
+.sle_cinema_div {
+	color: black;
+	display: inline;
+	margin-left: 13%;
+}
+
+.from_str {
+	color: mediumpurple;
+    margin-top: 35%;
+    font-weight: 600;
+    font-size: 1.2em;
+}
+
+.select_all_div {
+	width: 70%;
+    margin: 0 auto;
+    margin-top: 1%;
+    background-color: white;
+/*	height: 800px;*/
+    border-radius: 10px;
+    margin-bottom: 2%;
+}
+
+.top_seat_div {
+	border-right: 1px solid #979797;
+    padding-right: 31px;
+    font-weight: 600;
+    padding-top: 2%;
+}
+
+.seat_img {
+	margin-left: -1%;
+    width: 90px;
+    height: 60px;
+    margin-top: -3%;
+}
+
+.seat_movie_div {
+	background-color: #e7e7e7;
+    width: 100%;
+    height: 217px;
+    margin-top: -20px;
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
+}
+
+.pay_all_div {
+    width: 52%;
+    margin: 0 auto;
+    margin-top: 1%;
+    background-color: rgb(255 255 255 / 90%);
+    height: 1035px;
+    border-radius: 10px;
+    margin-bottom: 2%;
+}
+
+.pay_title_div {
+	font-size: 1.6em;
+    padding-top: 22px;
+    background-color: mediumpurple;
+    width: 100%;
+    height: 76px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: white;
+}
+
+.pay_title_div2 {
+	font-size: 1.6em;
+    padding-top: 22px;
+    background-color: mediumpurple;
+    width: 100%;
+    height: 76px;
+    color: white;
+}
+
+.pay_table_div {
+    background-color: white;
+    width: 100%;
+    height: 461px;
+    padding-top: 2%;
+}
+
+.pay_img {
+	width: 300px;
+	height: 400px;
+	border-radius: 10px;
+}
+
+.pay_td {
+	border-bottom: 1px solid #979797;
+}
+
+.pay_total_td {
+	background-color: mediumpurple;
+    border-radius: 7px;
+    color: white;
+}
+
+.pay_cre_div {
+	margin-right: 8.75rem;
+    margin-left: 6em;
+}
+
+.credit_in_div {
+	padding-top: 3%;
+    padding-bottom: 3%;
+    background-color: white;
+    font-size: 1.2em;
+}
+
+.pay_check_div {
+	padding-top: 2%;
+    padding-bottom: 2%;
+    background-color: white;
+    font-size: 1.1em;
+    height: 262px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.pay_check_in_div {
+	background-color: #b7b7b7;
+    width: 74%;
+    border-radius: 7px;
+    padding: 3%;
+}
+
+.pay_submit_div {
+	margin-top: 2%;
+}
+
+.pay_btn {
+	height: 50px;
+    background-color: mediumpurple;
+    width: 74%;
+    color: white;
+    font-size: 1.1em;
+}
+
+.pay_btn:hover {
+	opacity: 70%;
+}
+
+.com_all_div {
+	width: 52%;
+    margin: 0 auto;
+    margin-top: 1%;
+    background-color: rgb(255 255 255 / 90%);
+    height: 613px;
+    border-radius: 10px;
+    margin-bottom: 2%;
+}
+
+.com_end_div {
+	font-size: 1.6em;
+    padding-top: 22px;
+    background-color: mediumpurple;
+    width: 100%;
+    height: 76px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: white;
+}
+
+.bottom_box2{
+	width: 100%;
+    height: 200px;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 2%;
+	padding-top: 30px;
+    background-color: rgba(25,25,25,0.8);
+}
+
+.nav_bg {
+	margin: 0 auto;
+    width: 1000px;
+/*     margin-top: 5%; */
+}
+
+.main_body{
+	background-color: black;
+	
+}
+
+.title_font{
+	color: #fff;
+    FONT-SIZE: 25px;
+    font-weight: 600;
+    FONT-FAMILY: ARIAL;
+    margin-top: 5%;
+}
+
+.table_bg{
+	width: 60%;
+    max-width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.chart_table_bg {
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
+    padding-left: 3%;
+}
+
+.btn_bg{
+	margin-top: 10%;
+    width: 150px;
+}
+.search_bg {
+	width: 30%;
+    margin: 0 auto;
+}
+
+.nav_a {
+	color: white;
+    font-size: 20px;
+}
+
+.nav_a_color {
+	color: white;
+}
+
+.nav>li>a:focus, .nav>li>a:hover {
+    text-decoration: none;
+    color: mediumpurple;
+    background-color: black;
+}
+
+.search>a:hover{
+	color: mediumpurple;
+	text-decoration: underline;
+}
+
+.btn_bg:hover {
+    color: #8C8C8C;
+    background-color: #23272b;
+    border-color: #1d2124;
+}
+
+.bottom_box{
+	width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 2%;
+	padding-top: 30px;
+    height: 80px;
+    background-color: rgba(25,25,25,0.8);
+}
+
+.left_line{
+	display: inline;
+    padding-right: 5%;
+    border-right: 1px solid #fff;
+}
+
+.center_line{
+	display: inline;
+    padding-right: 5%;
+    padding-left: 5%;
+    border-right: 1px solid #fff;
+    font-size: 17px;
+}
+
+.right_line{
+	display: inline;
+    padding-left: 5%;
+    font-size: 17px;
+}
+
+.bottom_box a{
+	color: #fff;
+}
+
+.bottom_box a:hover{
+	text-decoration: underline;
+}
+
+.bottom_box2 a{
+	color: #fff;
+}
+
+.bottom_box2 a:hover{
+	text-decoration: underline;
+}
+
+.bottom_input{
+	background-color: transparent;
+    border-style: hidden;
+    border-bottom: 1px solid #aaa;
+}
+
+.bottom_btn[type="submit"] {
+	background-color: transparent;
+    font-family: FontAwesome;
+    border-style: hidden;
+    color: #fff;
+    font-size: 18px;
+}
+
+.td_img img {
+	border-radius: 10px;
+}
+
+.td_img img:hover {
+	opacity: 50%;
+}
+
 /* ### booking css start ### */
 	.bottm_div {
 		display: inline-block;
-		width: auto;
-		height: 150px;
-		vertical-align: top;
-		margin-right: 10px;
+	    width: auto;
+	    height: 150px;
+	    vertical-align: top;
+	    margin-right: 10px;
+	    color: black;
+	    margin-top: 34px;
+	    font-weight: bolder;
+	    border-right: 1px solid #979797;
+	    padding-right: 61px;
+	}
+	
+	.bottm_left_div {
+		display: inline-block;
+	    width: auto;
+	    height: 150px;
+	    vertical-align: top;
+	    color: black;
+	    margin-top: 34px;
+	    background-color: #979797;
+    	margin-left: -10%;
+    	margin-right: 1%;
+	}
+	
+	.bottm_left_div:hover {
+		opacity: 70%;
+	}
+	
+	.bottm_right_div {
+	    display: inline-block;
+	    width: auto;
+	    height: 150px;
+	    vertical-align: top;
+	    color: black;
+	    margin-top: 34px;
+	    background-color: mediumpurple;
+	    margin-right: -10%;
+	}
+	
+	.bottm_right_div:hover {
+		opacity: 70%;
 	}
 	
 	.top_div {
 		display: inline-block;
 		width: auto;
-		height: 120px;
+		height: 110px;
 		vertical-align: top;
-		margin-right: 10px;
+		margin-right: 19px;
 		margin-top: 20px;
 	}
 	
@@ -34,8 +523,16 @@
 		height:40px;
 	}
 	
+	.seat_btn {
+		width: 20px;
+    	height: 20px;
+    	border: 0px;
+    	background-color: rgb(178, 235, 244);
+	}
+	
 	.seat_btn:hover {
-		background: orange;
+		background-color: orange;
+		opacity: 50%;
 	}
 	
 	#seat_cover_div {
@@ -78,14 +575,15 @@ a.menu:after, .dropdown-toggle:after {
 
 /* ### main css start ### */
 .box_movie{
-	align:center;
+	padding-top: 20px;
 }
 
 .main_body_box{
-	width:900px;
+/* 	width:900px;
 	align:center;
-	padding-left:25%;
+	padding-left:25%; */
 }
+
 /* ### main css end ### */
 
 /* ### login modal start ### */
@@ -132,6 +630,20 @@ a.menu:after, .dropdown-toggle:after {
 /* ### login modal end ### */
 
 /* ### screen setting start ### */
+/*부트스트랩 CSS 페이지네이션 active색*/
+.pagination>.active>a,
+.pagination>.active>a:focus,
+.pagination>.active>a:hover,
+.pagination>.active>span,
+.pagination>.active>span:focus,
+.pagination>.active>span:hover {
+    background-color: mediumpurple;
+    border-color: mediumpurple;
+}
+/*부트스트랩 CSS 페이지네이션 글자색*/
+.pagination>li>a, .pagination>li>span {
+    color: mediumpurple;
+}
  
 input[type=date]::-webkit-calendar-picker-indicator {
   margin-left: -15px;
@@ -148,6 +660,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
     height:300px;
     background-color: #fff;
     align:center;
+    border-radius: 12px;
 }
 
 .movie-list , .movie-list a{
@@ -159,16 +672,29 @@ input[type=date]::-webkit-calendar-picker-indicator {
 	width:200px;
 	height:300px;
 	text-align:left;
+	background-color: black;
+    opacity: 80%;
 }
 .summary a {
 	position: absolute;
 	align:left;
 	text-align:center;
-
+	color: white;
+    padding: 9%;
 }
 
 .title-area {
 	position: relative;
+}
+
+.chart_a_div {
+	text-align: center;
+    font-size: 1.2em;
+}
+
+.chart_input_div {
+	text-align: right;
+    margin-right: 25%;
 }
 /* 영화 차트 end */
 
@@ -202,25 +728,30 @@ input[type=date]::-webkit-calendar-picker-indicator {
 	width: 300px;
 	text-align:cetner;
 	font-size:2em;
+	margin-left: 1%;
 }
 
 .movie-title {
 	font-size: 3.0666em;
+	margin-left: 1%;
 }
 
 .movie-title-en {
 	font-size : 1.3333em;
+	margin-left: 1%;
 }
 
 .movie-title, .movie-title-en {
 	color : #fff;
 	margin : 0 0 10px 0;
+	margin-left: 1%;
 }
 
 .movie-info {
 	left: 0px;
 	bottom:50px;
 	color: #fff;
+	margin-left: 1%;
 }
 
 .movie-info-stack {
@@ -228,6 +759,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
 	left: 100px;
 	bottom:50px;
 	color: #fff;
+	margin-left: 1%;
 }
 .movie-detail-cont .poster{
 	display: block;
@@ -235,15 +767,21 @@ input[type=date]::-webkit-calendar-picker-indicator {
     right: 0;
     top: 45px;
 }
+
+.poster img{
+	border-radius: 10px;
+}
+
 .movie-detail-cont .reserve {
 	display: block;
     position: absolute;
     right: 0;
     bottom: 85px;
-    width: 244px;
-    background-color: #329eb1;
+    width: 247px;
+    background-color: mediumpurple;
     text-align:center;
     font-color:#fff;
+    border-radius: 10px;
 }
 .movie-detail-cont .reserve a {
 	color:#fff;
@@ -254,6 +792,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
 	width: 1100px;
 	height: 100%;
 	margin: 0 0 0 350px;
+	color: #fff;
 }
 
 .movieInfo p span {
@@ -262,10 +801,18 @@ input[type=date]::-webkit-calendar-picker-indicator {
 }
 
 .review {
-	width: 1100px;
-	height: 100%;
-	margin: 0 0 0 350px;
+	width: 100%;
+    height: 100%;
+    /* margin: 0 0 0 350px; */
+    background-color: #151515;
 }
+
+.review_in_div {
+    width: 60%;
+    margin-left: 20%;
+    padding-top: 1%;
+}
+
 .review-list{
 	background-color:#f8f8fa;
 	margin-top:20px;
@@ -287,11 +834,12 @@ input[type=date]::-webkit-calendar-picker-indicator {
 .memberName {
 	float:left;
 	padding:0 30px 0 0;
+	color: white;
 }
 .memberName span{
 	display: block;
     text-align: center;
-    line-height: 80px;
+    line-height: 70px;
 }
 .review_write_text{
 	float:left;
@@ -303,8 +851,9 @@ input[type=date]::-webkit-calendar-picker-indicator {
 	clear:both;
 }
 .review_write_text textarea{
-	width:800px;
+	width:700px;
 	height:80px;
+	border-radius: 7px;
 }
 
 .memberName1 {
@@ -315,14 +864,19 @@ input[type=date]::-webkit-calendar-picker-indicator {
 .memberName1 span{
 	display: block;
     text-align: center;
-    line-height: 80px;
+    line-height: 70px;
     bottom:0px;
 }
 .review_write_button{
 	float:left;
 	display:block;
-	padding: 25px 0 0 10px;
+	padding: 0px 0 0 10px;
 	vertical-align:middle;
+}
+
+.review_btn {
+	width: 101px;
+    height: 79px;
 }
 .review-box {
 	background-color : #f8f8fa;
@@ -361,39 +915,84 @@ input[type=date]::-webkit-calendar-picker-indicator {
 	overflow:auto;
 }
 .review-list {
-	height:80px;
-	padding-top:20px;
-	overflow:auto;
+	height: 90px;
+    overflow: auto;
+    width: 53%;
+    margin-left: 20%;
+    padding-top: 10px;
+    border-radius: 7px;
+    margin-bottom: 1%;
 }
 .review_id {
-	clear:both;
-	float:left;
+	clear: both;
+    float: left;
+    margin-left: 1%;
+    border-right: 2px solid mediumpurple;
+    width: 90px;
 }
 .review_point {
-	width:80px;
-	float:left;
+	width: 80px;
+    float: left;
+    border-right: 2px solid mediumpurple;
+    padding-left: 1%;
 }
 .review_text{
-	float:left;
-	padding-left:80px;
+	float: left;
+    padding-left: 1%;
+    border-right: 2px solid mediumpurple;
+}
+
+.review_btn2{
+	width: 103px;
+    height: 29px;
+    margin-left: 12px;
+    margin-bottom: 4px;
 }
 /* 영화 상세페이지 end */
 /* 상영시간표 페이지 start */
+.timetable {
+	background-color: white;
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 1%;
+    border-radius: 10px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    margin-bottom: 1%;
+}
+
+.time_btn {
+	margin-top: 38%;
+}
+
 .timetable-container {
 	display: flex;
-  	justify-content: center;
+    justify-content: center;
+    margin-left: 3%;
+    border: 2px solid #575757;
+    border-radius: 7px;
+    width: 95%;
 }
 .movie-choise-area {
 	float : left;
 	align : middle;
+/* 	margin-left: 2%; */
+	border-right: 2px solid #575757;
+}
+
+.choise_li {
+	padding-top: 35%;
+    border-bottom: 2px solid #e7e7e7;
 }
 
 .movie-choise-area ul li {
 	width: 150px;
 	height:150px;
-	border:1px solid black;
+/* 	border:1px solid black; */
 	text-align:center;
 	list-style: none;
+	padding-top: 36%;
+    padding-right: 0%;
 }
 .movie-choise-area ul li a {
 	width:100%;
@@ -404,7 +1003,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
 	font-size:1.66em;
 }
 .movie-choise {
-	border:1px solid black;
+/* 	border:1px solid black; */
 	border-radius:3px;
 	float:left;
 	width: 800px;
@@ -413,34 +1012,50 @@ input[type=date]::-webkit-calendar-picker-indicator {
 }
 
 movie-choise1 {
-	border:1px solid black;
+/* 	border:1px solid black; */
 	border-radius:3px;
 	float:left;
 	width: 800px;
 	height:300px;
 	padding: 0 0 0 20px;
+	margin-left: 1%;
+}
+
+.local {
+	margin-top: 4%;
+    margin-left: 1%;
+/*     border-bottom: 2px solid black; */
 }
 
 .movie-choise li{
 	float:left;
 	width:33%;
 	height:25px;
+	margin-bottom: 2%;
 }
 .movie-choise li button {
-	width:80%;
+	width:100%;
 	text-align:left;
 }
-.movie-choise li button :hover {
+.movie-choise li button:hover {
 	text-decoration:underline;
 }
 .movieposter {
 	width:200px;
-	height:300px;
+	height:311px;
+	margin-right: 14px;
 }
+
+.movieposter img {
+	border-top-right-radius: 4px;
+    border-bottom-right-radius: 6px;
+    height: 312px;
+}
+
 .movie-tit-div{
-	width:60%;
-	justify-content: center;
-	margin-left:300px;
+	width: 95%;
+    justify-content: center;
+    margin: 0px auto;
 }
 
 .movie-tit{
@@ -448,7 +1063,7 @@ movie-choise1 {
 	margin-top : 60px!important;
 	line-height: 44px;
 	justify-content: center;
-	width:800px;
+/*	width:800px;*/
 }
 
 #title_ko, #title_ko2{
@@ -459,9 +1074,10 @@ movie-choise1 {
 	position:reative;
 	border-top: 1px solid gray;
 	border-bottom: 1px solid gray;
-	width: 1100px;
+	width: 97%;
 	height: 80px;
-	margin-left:300px;
+/*	margin-left:300px;*/
+	margin: 0 auto;
 }
 
 .btn-pre {
@@ -515,18 +1131,21 @@ movie-choise1 {
 }
 
 .btn-group1 {
-	margin-top:50px;
-	margin-left:300px;
+	width: 95%;
+    margin: 0 auto;
+    margin-top: 2%;
+    margin-left: 6%;
 }
 
 .btn1 {
-	width:140px;
-	background-color:white;
+	width: 114px;
+	margin-right: 1%;
+	background-color: lightblue;
 }
 
 .locationInfo {
 	margin-top:50px;
-	margin-left:300px;
+	margin-left: 6%;
 }
 
 .theater-list-box {
@@ -536,9 +1155,9 @@ movie-choise1 {
 }
 
 .theater-list-box1{
-	margin-left:300px;
-	width:1500px;
-	height:50px;
+	margin-left: 6%;
+    width: 95%;
+    height: 50px;
 }
 
 .localscreen {
@@ -550,7 +1169,7 @@ movie-choise1 {
 
 .movietype {
 	float:left;
-	width: 50px;
+/*	width: 50px;*/
 	height:50px;
 	text-align:center;
 	margin-right:50px;
@@ -567,8 +1186,19 @@ movie-choise1 {
 	margin-right:20px;
 }
 
+.movietime-box a{
+	color: mediumpurple;
+}
+
+.movietime-box a:hover{
+	color: mediumpurple;
+}
+
 .bk {
-	background-color:gray;
+	background-color: mediumpurple;
+    color: #fff;
+    -webkit-text-stroke: thin;
+    text-decoration-line: underline;
 }
 
 .timetable button:disabled {
@@ -579,6 +1209,7 @@ movie-choise1 {
 .title {
 	text-align: left;
 	margin-left: 500px;
+	color: white;
 }
 
 .movieWrite, .movieWrite tr, .movieWrite td, .movieWrite th{
@@ -588,8 +1219,8 @@ movie-choise1 {
 }
 
 .search {
-	text-align: right;
-	margin-right: 500px;
+	margin-right: 400px;
+    margin-bottom: 10px;
 }
 
 .movieList, .moviList tr, .movieList th, .movieList td{
